[gd_scene load_steps=3 format=3 uid="uid://cld1ldhg5ua8s"]

[ext_resource type="Script" uid="uid://6l83tfi1fgdv" path="res://Scrips/Helpers/scene_selector.gd" id="1_abt6q"]
[ext_resource type="FontFile" uid="uid://dyw18lmwefujw" path="res://Assets/Fonts/comic-sans-ms.ttf" id="2_0ox6p"]

[node name="SceneSelector" type="Node2D"]
script = ExtResource("1_abt6q")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 333.0
offset_top = 333.0
offset_right = 1587.0
offset_bottom = 704.0
theme_override_constants/separation = 25

[node name="MapA" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ox6p")
theme_override_font_sizes/font_size = 70
text = "Recordar todo aquello que quedo atras"

[node name="MapB" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ox6p")
theme_override_font_sizes/font_size = 70
text = "Seguir adelante sin mirar atras"

[node name="MapC" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ox6p")
theme_override_font_sizes/font_size = 70
text = "Â¿Algo mas quiza?"
